test/Parse/ConditionalCompilation/can_import_idempotent.code
// RUN: %empty-directory(%t)
//
// RUN: echo "public var dummyVar = Int()" | %target-language-frontend -module-name DummyModule -emit-module -o %t -
// RUN: %target-language-frontend -typecheck -verify -I %t %s

#if canImport(DummyModule)
print(DummyModule.dummyVar) // expected-error {{cannot find 'DummyModule' in scope}}
print(dummyVar) // expected-error {{cannot find 'dummyVar' in scope}}
#endif
